--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ body {
     overflow-x: hidden;
 }
 
+textarea {
+   resize: vertical;
+   max-height: 300px;
+   min-height: 80px;
+}
+
 .hero {
     padding-top: 50px;
     padding-bottom: 150px;
@@ -296,8 +302,16 @@ a.project-link:focus:after {
     width: 100%;
     height: 63px;
     font-size: 14px;
+    border: 2px solid rgba(255, 204, 62, 0.596);
     line-height: 28px;
     padding-left: 50px;
+}
+
+.input-email {
+    margin-bottom: 17px;
+    background-image: url('../img/mail.svg');
+    background-repeat: no-repeat;
+    background-position: center left 20px;
 }
 
 .input-name {
@@ -308,8 +322,9 @@ a.project-link:focus:after {
 }
 
 .input-name:focus,
-.input-phone:focus {
-    border: 2px solid #FFC41D;
+.input-phone:focus,
+.input-email:focus {
+    border: 3px solid #FFC41D;
 }
 
 .input-phone {
