--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,6 @@ a.project-link:focus:after {
     text-decoration-line: underline;
 }
 
-
 /* responsive */
 @media (max-width: 1100px) {
     .hero-avatar {
@@ -539,7 +538,9 @@ a.project-link:focus:after {
         line-height: 140%; 
     }
 
-    .project-paragraph, .project-subtitle, .project-subtitle {
+		.project-paragraph, 
+		.project-subtitle, 
+		.project-subtitle {
         font-size: 14px;
     }
 
