--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,8 @@ button:focus {
 	width: 389px;
 	height: 389px;
 	background-color: #fff;
-	background-image: url(../img/avatar.jpeg);
-	background-position: center -45px;
+	background-image: url(../img/avatar.jpg);
+	background-position: center -20px;
 	background-repeat: no-repeat;
 	background-size: 100%;
 	border-radius: 50%;
@@ -415,7 +415,7 @@ a.project-link:focus:after {
 		width: 300px;
 		height: 300px;
 		border-width: 10px;
-		background-position: center top -50px;
+		background-position: center top -20px;
 	}
 }
 
@@ -441,7 +441,7 @@ a.project-link:focus:after {
 		width: 270px;
 		height: 270px;
 		border-width: 10px;
-		background-position: center top -25px;
+		background-position: center top -12px;
 		margin-bottom: 17px;
 	}
 
@@ -492,7 +492,7 @@ a.project-link:focus:after {
 		height: 123px;
 		border-width: 4px;
 		background-size: 100%;
-		background-position: center -12px;
+		background-position: center -7px;
 	}
 
 	.hero-title {
